[package]
name = "jsmn-rs"
version = "0.3.0"
authors = ["Noah Ryan <nsmryan@gmail.com>"]
readme="README.md"
license="MIT"
build="build.rs"
keywords=["parser", "json", "ffi"]
links="jsmn"
description="Bindings and Rustic interface to the jsmn C library for JSON parsing"
homepage="https://github.com/nsmryan/jsmn-rs"
edition = "2024"

[dependencies]

[build-dependencies]
cc="1.2.19"
bindgen="0.71.1"

[features]
parent-links = []
strict = []

